--- a/main.html
+++ b/main.html
@@ -16,18 +16,51 @@
     </div>
     <button class="accordion">About Me</button>
 <div class="panel">
-  <p>Lorem ipsum...</p>
+  <p>Passionate and driven marketing professional with over five years of experience in digital marketing and brand management. Known for creative problem-solving, excellent communication skills, and a keen eye for data-driven insights. I have a proven track record in developing successful social media campaigns and content strategies that boost engagement and drive brand growth. I thrive in collaborative environments and am excited to bring fresh ideas to a forward-thinking team. When I’m not working, you’ll find me exploring new hiking trails, practicing photography, or reading about the latest trends in tech and design.</p>
 </div>
 
 <button class="accordion">Education</button>
 <div class="panel">
-  <p>Lorem ipsum...</p>
+    <p>Bachelor of Science in Marketing  
+        University of California, Berkeley  
+        Graduated: May 2019
+    </p>
+    <ul>
+        <li>GPA: 3.8/4.0</li>
+        <li>Relevant Coursework: Digital Marketing Strategy, Consumer Behavior, Market Research, Brand Management, Data Analytics</li>
+        <li>Honors: Dean’s List (6 semesters)</li>
+    </ul>
+    <p>Certifications:</p>
+    <ul>
+        <li>Google Analytics Certification – Google, 2020</li>
+        <li>Certified Digital Marketing Professional (CDMP) – Digital Marketing Institute, 2021</li>
+    </ul>
 </div>
 
 <button class="accordion">Work experience</button>
 <div class="panel">
-  <p>Lorem ipsum...</p>
-</div>
+    <p><strong>Digital Marketing Specialist</strong>  
+        BrightWave Media, San Francisco, CA  
+        June 2020 – Present
+    </p>
+    <ul>
+        <li>Developed and executed targeted social media campaigns that increased audience engagement by 45% across platforms.</li>
+        <li>Managed a $50,000 quarterly advertising budget, optimizing ad performance to achieve a 3:1 ROI on average.</li>
+        <li>Conducted market research and competitor analysis to identify trends and opportunities, informing content and ad strategies.</li>
+        <li>Collaborated with the design and content teams to produce engaging multimedia content, increasing brand visibility.</li>
+        <li>Implemented SEO best practices, leading to a 30% increase in organic website traffic over 12 months.</li>
+    </ul>
+
+    <p><strong>Marketing Intern</strong>  
+        InspireTech, Los Angeles, CA  
+        May 2019 – May 2020
+    </p>
+    <ul>
+        <li>Assisted in developing email marketing campaigns that contributed to a 20% boost in customer retention.</li>
+        <li>Supported the social media team by scheduling posts, tracking engagement metrics, and conducting A/B tests to refine messaging.</li>
+        <li>Compiled monthly performance reports using Google Analytics, presenting insights to the senior marketing team.</li>
+        <li>Conducted customer surveys and analyzed feedback, providing recommendations to improve product positioning.</li>
+    </ul>
 </body>
 <style>
     .header {
